SigmaCodebackup3rdSep/objects/Inventory_Location_Product__c.object
<CustomObject>
    <fields>
        <fullName>AdjustedReceivedqty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Stock IN Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adjusted_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Adjusted Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Airport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Airport</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Digital_Media_Campaign_Account_Type__c</field>
                <operation>equals</operation>
                <value>Airport</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory Location Products (Airport)</relationshipLabel>
        <relationshipName>Inventory_Location_Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attribute_Type__c</fullName>
        <formula>TEXT( Products__r.Attribute_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <label>Availability</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvailableAdjustedQty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Stock OUT Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charlie_Id__c</fullName>
        <label>Charlie Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class_Code__c</fullName>
        <label>Class Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Stock__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Current available stock in the Vendor Inventory Location</description>
        <inlineHelpText>Current available stock in the Vendor Inventory Location</inlineHelpText>
        <label>Current Stock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deliver_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Delivered Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivered_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sold Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Increased_Adjusted_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Increased Adjusted Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Installed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory_Location_Name__c</fullName>
        <formula>Inventory_Location__r.Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inventory Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location</label>
        <referenceTo>Inventory_Location__c</referenceTo>
        <relationshipLabel>Inventory Location Products</relationshipLabel>
        <relationshipName>Inventory_Location_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>Inventory Location Products</relationshipLabel>
        <relationshipName>Inventory_Location_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Name__c</fullName>
        <description>Invoice Name is used for Upload ILP and ILPLI through csv</description>
        <label>Invoice Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Current_User__c</fullName>
        <formula>If($User.Account_Id__c =  Products__r.Product_Catalog__r.Brewery_Account__c ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Date__c</fullName>
        <label>Last Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Inventory Location Products</relationshipLabel>
        <relationshipName>Inventory_Location_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Merchant_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchant Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory Location Products</relationshipLabel>
        <relationshipName>Inventory_Location_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Traffic__c</fullName>
        <label>Monthly Daily Traffic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Quantity__c</fullName>
        <formula>(Received_Quantity__c + Increased_Adjusted_Quantity__c +AdjustedReceivedqty__c  +  Rental_Adjustment_Quantity__c ) - (Delivered_Quantity__c + Rental_Delivered_Quantity__c + AvailableAdjustedQty__c+ Reduced_Adjusted_Quantity__c +Reserved_Quantity__c + Deliver_Quantity__c+Picked_Quantity__c+Package_Quantity__c+Shipped_Quantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Screens__c</fullName>
        <label>Number of Screens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Quantity__c</fullName>
        <label>Package Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory Location Products (Parent Account)</relationshipLabel>
        <relationshipName>Inventory_Location_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.Digital_Media_Campaign_Account_Type__c</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory Location Products (Partner)</relationshipLabel>
        <relationshipName>Inventory_Location_Products3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Picked_Quantity__c</fullName>
        <label>Picked Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Products__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Inventory Location Products</relationshipLabel>
        <relationshipName>Inventory_Location_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Received Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recent_Adjusted_Quantity__c</fullName>
        <label>Recent Adjusted Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reduced_Adjusted_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Reduced Adjusted Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rental_Adjustment_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>To increase/decrease rental quantities.</description>
        <label>Rental Adjustment Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rental_Delivered_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rented Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reserved_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Reserved Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Returned_Quantity__c</fullName>
        <label>Returned Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Share__c</fullName>
        <inlineHelpText>Enter Partner Revenue Share</inlineHelpText>
        <label>Partner Revenue Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Shipped_Quantity__c</fullName>
        <label>Shipped Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Type__c</fullName>
        <label>Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                    <default>true</default>
                    <label>System</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stock_Origin__c</fullName>
        <label>Stock Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stock Receiving</fullName>
                    <default>true</default>
                    <label>Stock Receiving</label>
                </value>
                <value>
                    <fullName>Direct Add</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Buying_Price__c</fullName>
        <formula>Unit_Price__c  *  Received_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Buying Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Inventory Location Product</label>
    <nameField>
        <displayFormat>ILP-{00000}</displayFormat>
        <label>Inventory Location Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Location Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>End_date_greater_than_Start_date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c  &lt;= Start_Date__c</errorConditionFormula>
        <errorMessage>End date  must be greater than Start date.</errorMessage>
    </validationRules>
</CustomObject>